snowpackage-site/snowpackage-site-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    namespace: snowpackage-site
    name: snowpackage-site
    labels:
        app: snowpackage-site
        app.kubernetes.io/name: snowpackage-site
        app.kubernetes.io/component: webapp
        app.kubernetes.io/part-of: snowpackage-site
        app.kubernetes.io/managed-by: argocd
spec:
    replicas: 1
    selector:
        matchLabels:
            app: snowpackage-site
    template:
        metadata:
            labels:
                app: snowpackage-site
                app.kubernetes.io/name: snowpackage-site
                app.kubernetes.io/component: webapp
                app.kubernetes.io/part-of: snowpackage-site
                app.kubernetes.io/managed-by: argocd
        spec:
            containers:
              - image: localhost:32000/snowpackage-site:latest
                name: snowpackage-site
                imagePullPolicy: Always
                args: [" -D__RESOURCES_PREFIX=file:///site/src/snowpackage/ -D__PROXY_PREFIX=http://snowpackage-site:3010"]
                ports:
                - containerPort: 3010
                volumeMounts:
                  - name: snowpackage-site
                    mountPath: /site
            volumes:
              - name: snowpackage-site
                persistentVolumeClaim:
                  claimName: snowpackage-site-pvc
