snowpackage-site/snow-package-service.yaml
apiVersion: v1
kind: Service
metadata:
    namespace: snowpackage-site
    name: snow-package-service
    labels:
        app: snow-package
spec:
    ports:
    - port: 8990
      protocol: TCP
      targetPort: 8990
    selector:
        app: snow-package
    type: ClusterIP
