snowpackage-site/snowpackage-site-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: snowpackage-site
  name: snowpackage-site-ingress
spec:
  rules:
    - host: snowpackage-site.local.test
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: snowpackage-site-service
              port:
                number: 3010
